dropped fixedsys on inline code - it's hard to read and creates a really strange visual effect

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -292,7 +292,7 @@ article img {
 }
 
 code {
-  @include fixedsys-stack();
+  // @include fixedsys-stack();
 }
 
 #date_created, #date_modified {
